tests/sksl/errors/ReservedNameSuperp.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'superp'
1 error
